--- a/index.html
+++ b/index.html
@@ -229,17 +229,17 @@
     <p>
     <h3><strong>Featured Articles</strong></h3>
         <li>
-            <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank">
+            <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">
                 Comprehensive Review of Heat Transfer Correlations of Supercritical CO<sub>2</sub> in Straight Tubes Near the Critical Point: A Historical Perspective
             </a>
         </li>
         <li>
-            <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext" target="_blank">
+            <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext" target="_blank" class="dashed-underline">
                 Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO<sub>2</sub>
             </a>
         </li>
         <li>
-            <a href="https://asmedigitalcollection.asme.org/heattransfer/article-abstract/143/10/104501/1114795/Impact-of-Uncertainty-on-Prediction-of?redirectedFrom=fulltext" target="_blank">
+            <a href="https://asmedigitalcollection.asme.org/heattransfer/article-abstract/143/10/104501/1114795/Impact-of-Uncertainty-on-Prediction-of?redirectedFrom=fulltext" target="_blank" class="dashed-underline">
                 Impact of Uncertainty on Prediction of Supercritical CO<sub>2</sub> Properties and Nusselt Numbers
             </a>
         </li>
