--- a/index.html
+++ b/index.html
@@ -244,8 +244,9 @@
             </a>
         </li>
     </ul>
-    <strong>Full Publication List:</strong> 
-    <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank">Google Scholar Profile</a>
+    <!-- <strong>Full Publication List:</strong> -->
+    <h3><strong>Full Publication List:</strong></h3>
+    <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
 </p>
 </section>
 
