--- a/index.html
+++ b/index.html
@@ -221,33 +221,33 @@
         <h2>Publications</h2>
     </header>
     <p>
-    The following conference papers are scheduled for 2025: <br />
-    1. A paper authored by me, titled <strong><em>Analysis of Thermal Entrance Length in Turbulent Supercritical CO$_{\textnormal{2}}$ Flow Through a Horizontal Circular Tube</em></strong>, accepted for presentation at the AIAA SciTech Forum, Orlando, Florida. <br />
-    2. A paper authored by my student, titled <strong><em>An Optimization of Tesla-Type Valve for Mitigating Backflow in Rotary Detonation Engines</em></strong>, accepted for presentation at the ASME Aerospace Structures, Structural Dynamics, and Materials Conference, Houston, Texas. <br />
-    3. A paper authored by my student, titled <strong><em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em></strong>, currently under review for the SmallSat Europe Conference, Amsterdam, Netherlands. <br />
+        The following conference papers are scheduled for 2025: <br />
+        1. A paper authored by me, titled <strong><em>Analysis of Thermal Entrance Length in Turbulent Supercritical CO$_{\textnormal{2}}$ Flow Through a Horizontal Circular Tube</em></strong>, accepted for presentation at the AIAA SciTech Forum, Orlando, Florida. <br />
+        2. A paper authored by my student, titled <strong><em>An Optimization of Tesla-Type Valve for Mitigating Backflow in Rotary Detonation Engines</em></strong>, accepted for presentation at the ASME Aerospace Structures, Structural Dynamics, and Materials Conference, Houston, Texas. <br />
+        3. A paper authored by my student, titled <strong><em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em></strong>, currently under review for the SmallSat Europe Conference, Amsterdam, Netherlands. <br />
     </p>
     <p>
-    <h3><strong>Featured Articles</strong></h3>
-        <li>
-            <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">
-                Comprehensive Review of Heat Transfer Correlations of Supercritical CO<sub>2</sub> in Straight Tubes Near the Critical Point: A Historical Perspective
-            </a>
-        </li>
-        <li>
-            <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext" target="_blank" class="dashed-underline">
-                Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO<sub>2</sub>
-            </a>
-        </li>
-        <li>
-            <a href="https://asmedigitalcollection.asme.org/heattransfer/article-abstract/143/10/104501/1114795/Impact-of-Uncertainty-on-Prediction-of?redirectedFrom=fulltext" target="_blank" class="dashed-underline">
-                Impact of Uncertainty on Prediction of Supercritical CO<sub>2</sub> Properties and Nusselt Numbers
-            </a>
-        </li>
-    </ul>
-    <!-- <strong>Full Publication List:</strong> -->
-    <h3><strong>Full Publication List:</strong></h3>
-    <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
-</p>
+        <h3 style="margin-bottom: 15px;"><strong>Featured Articles</strong></h3>
+        <ul>
+            <li>
+                <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">
+                    Comprehensive Review of Heat Transfer Correlations of Supercritical CO<sub>2</sub> in Straight Tubes Near the Critical Point: A Historical Perspective
+                </a>
+            </li>
+            <li>
+                <a href="https://asmedigitalcollection.asme.org/verification/article-abstract/6/4/041001/1114208/Effect-of-the-Heat-Transfer-Coefficient-Reference?redirectedFrom=fulltext" target="_blank" class="dashed-underline">
+                    Effect of the Heat Transfer Coefficient Reference Temperatures on Validating Numerical Models of Supercritical CO<sub>2</sub>
+                </a>
+            </li>
+            <li>
+                <a href="https://asmedigitalcollection.asme.org/heattransfer/article-abstract/143/10/104501/1114795/Impact-of-Uncertainty-on-Prediction-of?redirectedFrom=fulltext" target="_blank" class="dashed-underline">
+                    Impact of Uncertainty on Prediction of Supercritical CO<sub>2</sub> Properties and Nusselt Numbers
+                </a>
+            </li>
+        </ul>
+        <h3 style="margin-top: 25px; margin-bottom: 15px;"><strong>Full Publication List:</strong></h3>
+        <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
+    </p>
 </section>
 
 
