--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
                 </a>
             </li>
         </ul>
-        <h3 style="margin-top: 25px; margin-bottom: 15px;"><strong>Full Publication List:</strong></h3>
-        <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
+        <h3 style="margin-top: 25px; margin-bottom: 15px;"><strong>Full Publication List:</strong></h3><a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
     </p>
 </section>
 
