--- a/index.html
+++ b/index.html
@@ -245,10 +245,12 @@
                 </a>
             </li>
         </ul>
-        <h3 style="margin-top: 25px; margin-bottom: 15px;"><strong>Full Publication List:</strong></h3><a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
+        <div style="display: flex; align-items: center; gap: 5px; margin-top: 25px; margin-bottom: 15px;">
+            <h3 style="margin: 0;"><strong>Full Publication List:</strong></h3>
+            <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
+        </div>
     </p>
 </section>
-
 
 <!-- People -->
 <section id="People" class="main">
