--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
         <h2>Publications</h2>
     </header>
     <p>
-        The following conference papers are scheduled for 2025: <br />
+        <!-- The following conference papers are scheduled for 2025: <br /> -->
+	<h3><strong>Conference Papers for 2025</strong></h3>
         1. A paper authored by me, titled <strong><em>Analysis of Thermal Entrance Length in Turbulent Supercritical CO$_{\textnormal{2}}$ Flow Through a Horizontal Circular Tube</em></strong>, accepted for presentation at the AIAA SciTech Forum, Orlando, Florida. <br />
         2. A paper authored by my student, titled <strong><em>An Optimization of Tesla-Type Valve for Mitigating Backflow in Rotary Detonation Engines</em></strong>, accepted for presentation at the ASME Aerospace Structures, Structural Dynamics, and Materials Conference, Houston, Texas. <br />
         3. A paper authored by my student, titled <strong><em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em></strong>, currently under review for the SmallSat Europe Conference, Amsterdam, Netherlands. <br />
