--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         3. A paper authored by my student, titled <strong><em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em></strong>, currently under review for the SmallSat Europe Conference, Amsterdam, Netherlands. <br />
     </p>
     <p>
-        <h3 style="margin-bottom: 15px;"><strong>Featured Articles</strong></h3>
+        <h3 style="margin-bottom: 15px;"><strong>Featured Journal Papers</strong></h3>
         <ul>
             <li>
                 <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">
