--- a/index.html
+++ b/index.html
@@ -260,12 +260,15 @@
     </header>
     
     <p>Faculty Members: <br />
+	<a href="https://apps.csuchico.edu/directory/Employee/ychao">Dr. Yang Chao</a>, Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />
+	<a href="https://apps.csuchico.edu/directory/Employee/dmoconnor">Dr. Dennis M. O'Connor</a>, Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />  
         <a href="https://faculty.erau.edu/Sandra.Boetcher">Dr. Sandra Boetcher</a>, Professor, ASME Fellow, Mechanical Engineering, Embry-Riddle Aeronautical University<br />
         <a href="https://faculty.erau.edu/Mark.Ricklick">Dr. Mark Ricklick</a>, Associate Professor, Aerospace Engineering, Embry-Riddle Aeronautical University<br /><br />
     </p>
 
     <p>Student Members: <br />
-        Yang Chao, Ph.D. student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University<br />
+        Forest Siewert, Undergraduate student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<<br />
+	Samaher Shaheen, Undergraduate student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<<br />
         Nicholas Lopes, Ph.D. student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University<br />
     </p>
 </section>
