--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     
     <p>Faculty Members: <br />
 	<a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">Dr. Yang Chao</a>, Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />
-	<a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">Dr. Dennis M. O'Connor</a>, Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />  
+	<a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">Dr. Dennis O'Connor</a>, Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />  
         <a href="https://faculty.erau.edu/Sandra.Boetcher" class="dashed-underline">Dr. Sandra Boetcher</a>, Professor, ASME Fellow, Mechanical Engineering, Embry-Riddle Aeronautical University<br />
         <a href="https://faculty.erau.edu/Mark.Ricklick" class="dashed-underline">Dr. Mark Ricklick</a>, Associate Professor, Aerospace Engineering, Embry-Riddle Aeronautical University<br /><br />
     </p>
