--- a/index.html
+++ b/index.html
@@ -259,14 +259,16 @@
         <h2>Research Team</h2>
     </header>
     
-    <p>Faculty Members: <br />
+    <p>
+	<h3><strong>Faculty Members</strong></h3>
 	<a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">Dr. Yang Chao</a>, Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />
 	<a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">Dr. Dennis O'Connor</a>, Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />  
         <a href="https://faculty.erau.edu/Sandra.Boetcher" class="dashed-underline">Dr. Sandra Boetcher</a>, Professor, ASME Fellow, Mechanical Engineering, Embry-Riddle Aeronautical University<br />
         <a href="https://faculty.erau.edu/Mark.Ricklick" class="dashed-underline">Dr. Mark Ricklick</a>, Associate Professor, Aerospace Engineering, Embry-Riddle Aeronautical University<br /><br />
     </p>
 
-    <p>Student Members: <br />
+    <p>
+	<h3><strong>Student Members</strong></h3>
         Forest Siewert, Undergraduate student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />
 	Samaher Shaheen, Undergraduate student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico<br />
         Nicholas Lopes, Ph.D. student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University<br />
