--- a/index.html
+++ b/index.html
@@ -265,22 +265,22 @@
         <ul>
             <li>
                 <a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">
-                    Dr. Yang Chao
+                    <strong>Dr. Yang Chao</strong>
                 </a>, Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico
             </li>
             <li>
                 <a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">
-                    Dr. Dennis O'Connor
+                    <strong>Dr. Dennis O'Connor</strong>
                 </a>, Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico
             </li>
             <li>
                 <a href="https://faculty.erau.edu/Sandra.Boetcher" class="dashed-underline">
-                    Dr. Sandra Boetcher
+                    <strong>Dr. Sandra Boetcher</strong>
                 </a>, Professor, ASME Fellow, Mechanical Engineering, Embry-Riddle Aeronautical University
             </li>
             <li>
                 <a href="https://faculty.erau.edu/Mark.Ricklick" class="dashed-underline">
-                    Dr. Mark Ricklick
+                    <strong>Dr. Mark Ricklick</strong>
                 </a>, Associate Professor, Aerospace Engineering, Embry-Riddle Aeronautical University
             </li>
         </ul>
@@ -289,9 +289,9 @@
     <div>
         <h3><strong>Student Members</strong></h3>
         <ul>
-            <li>Forest Siewert, Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</li>
-            <li>Samaher Shaheen, Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</li>
-            <li>Nicholas Lopes, Ph.D. Student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University</li>
+            <li><strong>Forest Siewert</strong>, Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</li>
+            <li><strong>Samaher Shaheen</strong>, Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</li>
+            <li><strong>Nicholas Lopes</strong>, Ph.D. Student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University</li>
         </ul>
     </div>
 </section>
