--- a/index.html
+++ b/index.html
@@ -268,6 +268,14 @@
                     <strong>Dr. Yang Chao</strong>
                 </a>, Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico
             </li>
+
+		<ul class="class-list">
+                    <li>
+                        <strong>Dr. Yang Chao</strong>
+                        <span class="details">Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
+                    </li>
+                </ul>
+		
             <li>
                 <a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">
                     <strong>Dr. Dennis O'Connor</strong>
