--- a/index.html
+++ b/index.html
@@ -271,8 +271,14 @@
 
 		<ul class="class-list">
                     <li>
-                        <strong>Dr. Yang Chao</strong>
+			<a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">
+				<strong>Dr. Yang Chao</strong>
                         <span class="details">Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
+                    </li>
+		    <li>
+			<a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">
+				<strong>Dr. Dennis O'Connor</strong>
+                        <span class="details">Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
                     </li>
                 </ul>
 		
