--- a/index.html
+++ b/index.html
@@ -262,50 +262,51 @@
     
     <div>
         <h3><strong>Faculty Members</strong></h3>
-        <ul>
+        <ul class="class-list">
             <li>
                 <a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">
                     <strong>Dr. Yang Chao</strong>
-                </a>, Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico
+                </a>
+                <span class="details">Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
             </li>
-
-		<ul class="class-list">
-                    <li>
-			<a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">
-				<strong>Dr. Yang Chao</strong>
-                        <span class="details">Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
-                    </li>
-		    <li>
-			<a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">
-				<strong>Dr. Dennis O'Connor</strong>
-                        <span class="details">Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
-                    </li>
-                </ul>
-		
             <li>
                 <a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">
                     <strong>Dr. Dennis O'Connor</strong>
-                </a>, Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico
+                </a>
+                <span class="details">Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
             </li>
             <li>
                 <a href="https://faculty.erau.edu/Sandra.Boetcher" class="dashed-underline">
                     <strong>Dr. Sandra Boetcher</strong>
-                </a>, Professor, ASME Fellow, Mechanical Engineering, Embry-Riddle Aeronautical University
+                </a>
+                <span class="details">Professor, ASME Fellow, Mechanical Engineering, Embry-Riddle Aeronautical University</span>
             </li>
             <li>
                 <a href="https://faculty.erau.edu/Mark.Ricklick" class="dashed-underline">
                     <strong>Dr. Mark Ricklick</strong>
-                </a>, Associate Professor, Aerospace Engineering, Embry-Riddle Aeronautical University
+                </a>
+                <span class="details">Associate Professor, Aerospace Engineering, Embry-Riddle Aeronautical University</span>
             </li>
         </ul>
     </div>
-
     <div>
         <h3><strong>Student Members</strong></h3>
-        <ul>
-            <li><strong>Forest Siewert</strong>, Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</li>
-            <li><strong>Samaher Shaheen</strong>, Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</li>
-            <li><strong>Nicholas Lopes</strong>, Ph.D. Student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University</li>
+        <ul class="class-list">
+            <li>
+                    <strong>Forest Siewert</strong>
+                </a>
+                <span class="details">Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
+            </li>
+            <li>
+                    <strong>Samaher Shaheen</strong>
+                </a>
+                <span class="details">Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
+            </li>
+            <li>
+                    <strong>DNicholas Lopes</strong>
+                </a>
+                <span class="details">Ph.D. Student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University</span>
+            </li>
         </ul>
     </div>
 </section>
