--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
                 <a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">
                     <strong>Dr. Yang Chao</strong>
                 </a>
-                <span class="details">Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
+                <span class="details">Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing, California State University, Chico</span>
             </li>
             <li>
                 <a href="https://apps.csuchico.edu/directory/Employee/dmoconnor" class="dashed-underline">
                     <strong>Dr. Dennis O'Connor</strong>
                 </a>
-                <span class="details">Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
+                <span class="details">Associate Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing, California State University, Chico</span>
             </li>
             <li>
                 <a href="https://faculty.erau.edu/Sandra.Boetcher" class="dashed-underline">
@@ -295,12 +295,12 @@
             <li>
                     <strong>Forest Siewert</strong>
                 </a>
-                <span class="details">Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
+                <span class="details">Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing, California State University, Chico</span>
             </li>
             <li>
                     <strong>Samaher Shaheen</strong>
                 </a>
-                <span class="details">Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing Department, California State University, Chico</span>
+                <span class="details">Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing, California State University, Chico</span>
             </li>
             <li>
                     <strong>DNicholas Lopes</strong>
