--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <span class="details">Undergraduate Student, Mechanical and Mechatronic Engineering and Advanced Manufacturing, California State University, Chico</span>
             </li>
             <li>
-                    <strong>DNicholas Lopes</strong>
+                    <strong>Nicholas Lopes</strong>
                 </a>
                 <span class="details">Ph.D. Student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University</span>
             </li>
