--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <li>
                     <strong>Nicholas Lopes</strong>
                 </a>
-                <span class="details">Ph.D. Student in Thermal Science, Mechanical Engineering, Embry-Riddle Aeronautical University</span>
+                <span class="details">Ph.D. Student, Mechanical Engineering, Embry-Riddle Aeronautical University</span>
             </li>
         </ul>
     </div>
