--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     </header>
     
     <div>
-        <h3><strong>Faculty Members</strong></h3>
+        <h3>Faculty Members</h3>
         <ul class="class-list">
             <li>
                 <a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">
