--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         </ul>
     </div>
     <div>
-        <h3><strong>Student Members</strong></h3>
+        <h3>Student Members</h3>
         <ul class="class-list">
             <li>
                     <strong>Forest Siewert</strong>
