--- a/index.html
+++ b/index.html
@@ -319,6 +319,15 @@
         <h2>My Hobbies</h2>
     </header>
 
+    <div>
+        <h3>Hiking</h3>
+        <ul class="class-list">
+            <li>
+                I enjoy mountain views, and my next goal is the Appalachian Trail. Unfortunately, Florida is too flat.<br /><br />
+            </li>
+        </ul>
+    </div>
+	
     <p>Hiking: <br />
         I enjoy mountain views, and my next goal is the Appalachian Trail. Unfortunately, Florida is too flat.<br /><br />
     </p>
