--- a/index.html
+++ b/index.html
@@ -327,21 +327,27 @@
             </li>
         </ul>
     </div>
-	
-    <p>Hiking: <br />
-        I enjoy mountain views, and my next goal is the Appalachian Trail. Unfortunately, Florida is too flat.<br /><br />
-    </p>
 
-    <p>Reading: <br />
-        I am a bookworm; biographies and politics are my favorites. Currently, I am reading 
-        <b><a href="https://www.goodreads.com/book/show/43726589-people-power-and-profits?from_search=true&from_srp=true&qid=1VBYk7pFkU&rank=1">
+    <div>
+        <h3>Reading</h3>
+        <ul class="class-list">
+            <li>
+                I am a bookworm; biographies and politics are my favorites. Currently, I am reading 
+		<b><a href="https://www.goodreads.com/book/show/43726589-people-power-and-profits?from_search=true&from_srp=true&qid=1VBYk7pFkU&rank=1">
             People, Power and Profits
-        </a></b> by Joseph Stiglitz.
-    </p>
-
-    <p>Cooking: <br />
-        I am a good chef, fluent in cooking most of the Chinese food. Fun fact: if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.<br /><br />
-    </p>
+		</a></b> by Joseph Stiglitz.
+            </li>
+        </ul>
+    </div>
+	
+    <div>
+        <h3>Cooking</h3>
+        <ul class="class-list">
+            <li>
+                I am a good chef, fluent in cooking most of the Chinese food. Fun fact: if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.<br /><br />
+            </li>
+        </ul>
+    </div>
 </section>
 </div>
 
