--- a/index.html
+++ b/index.html
@@ -322,9 +322,7 @@
     <div>
         <h3>Hiking</h3>
         <ul class="class-list">
-            <li>
-                I enjoy mountain views, and my next goal is the Appalachian Trail. Unfortunately, Florida is too flat.<br /><br />
-            </li>
+            <li>I enjoy mountain views, and my next goal is the Appalachian Trail. Unfortunately, Florida is too flat.</li>
         </ul>
     </div>
 
@@ -333,9 +331,9 @@
         <ul class="class-list">
             <li>
                 I am a bookworm; biographies and politics are my favorites. Currently, I am reading 
-		<b><a href="https://www.goodreads.com/book/show/43726589-people-power-and-profits?from_search=true&from_srp=true&qid=1VBYk7pFkU&rank=1">
-            People, Power and Profits
-		</a></b> by Joseph Stiglitz.
+                <b><a href="https://www.goodreads.com/book/show/43726589-people-power-and-profits?from_search=true&from_srp=true&qid=1VBYk7pFkU&rank=1">
+                People, Power and Profits
+                </a></b> by Joseph Stiglitz.
             </li>
         </ul>
     </div>
@@ -344,12 +342,12 @@
         <h3>Cooking</h3>
         <ul class="class-list">
             <li>
-                I am a good chef, fluent in cooking most of the Chinese food. Fun fact: if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.<br /><br />
+                I am a good chef, fluent in cooking most of the Chinese food. Fun fact: if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.
             </li>
         </ul>
     </div>
 </section>
-</div>
+
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
