--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <div>
         <h3>Hiking</h3>
         <ul class="class-list">
-            <li>I enjoy mountain views, and my next goal is the Appalachian Trail. Unfortunately, Florida is too flat.</li>
+            <li>I love hiking and chasing mountain views—mostly because they make me feel like I’ve achieved something without having to write a research paper about it. My next goal is the Appalachian Trail.</li>
         </ul>
     </div>
 
@@ -330,10 +330,9 @@
         <h3>Reading</h3>
         <ul class="class-list">
             <li>
-                I am a bookworm; biographies and politics are my favorites. Currently, I am reading 
-                <b><a href="https://www.goodreads.com/book/show/43726589-people-power-and-profits?from_search=true&from_srp=true&qid=1VBYk7pFkU&rank=1">
-                People, Power and Profits
-                </a></b> by Joseph Stiglitz.
+                Books are my jam—especially biographies and politics. I’d call myself a bookworm, but even worms don’t read as much as I do. Right now, I’m diving into 
+		<a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">People, Power, and Profits<\a> 
+			by Joseph Stiglitz, which makes me feel both smarter and poorer at the same time.
             </li>
         </ul>
     </div>
@@ -342,7 +341,7 @@
         <h3>Cooking</h3>
         <ul class="class-list">
             <li>
-                I am a good chef, fluent in cooking most of the Chinese food. Fun fact: if a Chinese says he/she is good at cooking hotpot, that means he/she can't cook.
+                I consider myself a master chef (self-proclaimed), capable of whipping up almost any Chinese dish. Here’s a fun fact: if a Chinese person brags about being good at cooking hotpot, it’s a subtle way of saying they can’t cook anything else. Thankfully, I’m good at both hotpot and everything else—or so I tell myself.
             </li>
         </ul>
     </div>
