--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <div>
         <h3>Hiking</h3>
         <ul class="class-list">
-            <li>I love hiking and chasing mountain views—mostly because they make me feel like I’ve achieved something without having to write a research paper about it. My next goal is the Appalachian Trail.</li>
+            <li>I love hiking and chasing mountain views—mostly because they make me feel like I’ve achieved something without having to write a research paper about it. My next goal is the Appalachian Trail.</li><br /><br />
         </ul>
     </div>
 
