--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <div>
         <h3>Hiking</h3>
         <ul class="class-list">
-            <li>I love hiking and chasing mountain views—mostly because they make me feel like I’ve achieved something without having to write a research paper about it. My next goal is the Appalachian Trail.</li><br /><br />
+            <li>I love hiking and chasing mountain views—mostly because they make me feel like I’ve achieved something without having to write a research paper about it. My next goal is the Appalachian Trail.</li><br />
         </ul>
     </div>
 
@@ -331,7 +331,7 @@
         <ul class="class-list">
             <li>
                 Books are my jam—especially biographies and politics. I’d call myself a bookworm, but even worms don’t read as much as I do. Right now, I’m diving into 
-		<a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">People, Power, and Profits</a>
+		<a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">People, Power, and Profits</a><br />
 			by Joseph Stiglitz, which makes me feel both smarter and poorer at the same time.
             </li>
         </ul>
