--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@
             <li>
                 Books are my jam—especially biographies and politics. I’d call myself a bookworm, but even worms don’t read as much as I do. Right now, I’m diving into 
 		<a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">People, Power, and Profits</a>
-			by Joseph Stiglitz, which makes me feel both smarter and poorer at the same time.<br />
-            </li>
+			by Joseph Stiglitz, which makes me feel both smarter and poorer at the same time.</li><br />
         </ul>
     </div>
 	
