--- a/index.html
+++ b/index.html
@@ -330,9 +330,10 @@
         <h3>Reading</h3>
         <ul class="class-list">
             <li>
-                Books are my jam—especially biographies and politics. I’d call myself a bookworm, but even worms don’t read as much as I do. Right now, I’m diving into 
+                Books are my jam—especially biographies and politics. I’d call myself a bookworm, but even worms don’t read as much as I do. I recently finished 
 		<a href="https://www.goodreads.com/book/show/43726589-people-power-and-profits" target="_blank" class="dashed-underline">People, Power, and Profits</a>
-			by Joseph Stiglitz, which makes me feel both smarter and poorer at the same time.</li><br />
+		by Joseph Stiglitz, which makes me feel both smarter and poorer at the same time. Now, I’m diving into 
+		<a href="https://www.goodreads.com/book/show/197773418-slow-productivity" target="_blank" class="dashed-underline">Slow Productivity</a> by Cal Newport—a book that promises to make me productive, but, you know… slowly.</li><br />
         </ul>
     </div>
 	
