--- a/index.html
+++ b/index.html
@@ -322,7 +322,9 @@
     <div>
         <h3>Hiking</h3>
         <ul class="class-list">
-            <li>I love hiking and chasing mountain views—mostly because they make me feel like I’ve achieved something without having to write a research paper about it. My next goal is the Appalachian Trail.</li><br />
+            <li>I love hiking and chasing mountain views—mostly because they make me feel like I’ve achieved something without having to write a research paper about it. 
+		    Sadly, I spent the last 7 years in Florida, where the only “elevation” I experienced was climbing a staircase. Fortunately, I’ve made it to Chico, California, where mountains are practically everywhere. 
+		    My next big goal? The Appalachian Trail—because why not aim ridiculously high (literally and figuratively)?</li><br />
         </ul>
     </div>
 
