--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<header id="header" class="alt">
 				<!-- <span class="logo"><img src="images/ERAUlogo_round.png" alt="" /></span> -->
 				<h1>Yang Chao, Ph.D.</h1>
-				<p>All simulations are wrong, but some are <strong>hot enough</strong> to be useful.</p>
+				<p>All simulations are wrong, but some are <strong>hot</strong> enough to be useful.</p>
 			</header>
 
 <!-- Nav -->
