--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h2>About Me</h2>
                 </header>
 		<p>
-                I am an <strong>Assistant Professor</strong> in the Department of Mechanical and Mechatronic Engineering and Advanced Manufacturing at 
+                I am an <strong>Assistant Professor</strong> in the Mechanical and Mechatronic Engineering and Advanced Manufacturing Department at 
                 <a href="https://www.csuchico.edu/" class="dashed-underline"><strong>California State University, Chico</strong></a>. I am passionate about teaching and mentoring students, inspiring them in the areas of <strong>programming</strong>, 
                 <strong>thermal science</strong>, and <strong>aerospace applications</strong>.
                 </p>
