--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<a href="https://en.wikipedia.org/wiki/Civil_Aviation_University_of_China" class="dashed-underline"><strong>Civil Aviation University of China</strong></a> 
 		in 2018, and a <strong>Master's in Aerospace Engineering</strong> from 
                 <a href="https://erau.edu/" class="dashed-underline"><strong>Embry-Riddle Aeronautical University</strong></a> in 2020, specializing in 
-                <strong>Heat Transfer for Propulsion System Design</strong>. Building on this expertise, 
+                <strong>Heat Transfer for Aerospace Propulsion System Design</strong>. Building on this expertise, 
                 I pursued my <strong>Ph.D. in Mechanical Engineering</strong> at Embry-Riddle, 
                 with a research focus on heat transfer performance in 
                 <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide" class="dashed-underline">
