--- a/index.html
+++ b/index.html
@@ -75,16 +75,15 @@
                 <strong>thermal science</strong>, and <strong>aerospace applications</strong>.
                 </p>
                 <p>
-		I hold a <strong>Bachelor's degree in Aerospace Engineering</strong> from the  
+		I earned a <strong>Bachelor's degree in Aerospace Engineering</strong> from the  
 		<a href="https://en.wikipedia.org/wiki/Civil_Aviation_University_of_China" class="dashed-underline"><strong>Civil Aviation University of China</strong></a> 
-		in 2018, and a <strong>Master's in Aerospace Engineering</strong> from 
+		in 2018, followed by a <strong>Master's degree in Aerospace Engineering</strong> from 
                 <a href="https://erau.edu/" class="dashed-underline"><strong>Embry-Riddle Aeronautical University</strong></a> in 2020, specializing in 
-                <strong>Heat Transfer for Aerospace Propulsion System Design</strong>. Building on this expertise, 
-                I pursued my <strong>Ph.D. in Mechanical Engineering</strong> at Embry-Riddle, 
-                with a research focus on heat transfer performance in 
+                <strong>Heat Transfer for Aerospace Propulsion System Design</strong>. In 2024, I completed my <strong>Ph.D. in Mechanical Engineering</strong> at Embry-Riddle,
+                where my research focused on the heat transfer performance of
                 <a href="https://en.wikipedia.org/wiki/Supercritical_carbon_dioxide" class="dashed-underline">
-                <strong>Supercritical Carbon Dioxide (sCO2)</strong></a> systems—a field that holds 
-                promising applications in energy efficiency and power generation.
+                <strong>Supercritical Carbon Dioxide (sCO$_{\textnormal{2}}$)</strong></a> systems. 
+		This work aimed to advance energy efficiency and power generation technologies, contributing to the development of innovative solutions in thermal-fluid sciences.
                 </p>
 		    
                 <!-- Contact Information -->
