--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
     <p>
         <!-- The following conference papers are scheduled for 2025: <br /> -->
 	<h3><strong>Conference Papers for 2025</strong></h3>
-        1. A paper authored by me, titled <strong><em>Analysis of Thermal Entrance Length in Turbulent Supercritical CO$_{\textnormal{2}}$ Flow Through a Horizontal Circular Tube</em></strong>, accepted for presentation at the AIAA SciTech Forum, Orlando, Florida. <br />
-        2. A paper authored by my student, titled <strong><em>An Optimization of Tesla-Type Valve for Mitigating Backflow in Rotary Detonation Engines</em></strong>, accepted for presentation at the ASME Aerospace Structures, Structural Dynamics, and Materials Conference, Houston, Texas. <br />
-        3. A paper authored by my student, titled <strong><em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em></strong>, currently under review for the SmallSat Europe Conference, Amsterdam, Netherlands. <br />
+        1. A paper authored by me, titled <strong><em>Analysis of Thermal Entrance Length in Turbulent Supercritical CO$_{\textnormal{2}}$ Flow Through a Horizontal Circular Tube</em></strong>, accepted for presentation at the AIAA SciTech Forum, scheduled 6–10 January 2025 in Orlando, Florida. <br />
+        2. A paper authored by my student, titled <strong><em>An Optimization of Tesla-Type Valve for Mitigating Backflow in Rotary Detonation Engines</em></strong>, accepted for presentation at the ASME Aerospace Structures, Structural Dynamics, and Materials Conference, scheduled 5–7 May 2025 in Houston, Texas. <br />
+        3. A paper authored by my student, titled <strong><em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em></strong>, currently under review for the SmallSat Europe Conference, scheduled 27-28 May 2025 in Amsterdam, Netherlands. <br />
     </p>
     <p>
         <h3 style="margin-bottom: 15px;"><strong>Featured Journal Papers</strong></h3>
