--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</header>
 
 <!-- Nav -->
-<nav id="nav">
+<nav id="nav" class="fixed-navbar">
     <ul>
         <li><a href="#About">About</a></li>
         <li class="dropdown">
@@ -53,7 +53,7 @@
         <li><a href="#Research">Research</a></li>
         <li><a href="#Publications">Publications</a></li>
         <li><a href="#People">People</a></li>
-	<li><a href="#MyHobbies">Hobbies</a></li>
+        <li><a href="#MyHobbies">Hobbies</a></li>
     </ul>
 </nav>
 
