--- a/index.html
+++ b/index.html
@@ -358,28 +358,31 @@
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 
-document.addEventListener("scroll", function () {
-    const sections = document.querySelectorAll("section");
-    const navLinks = document.querySelectorAll("#nav ul li a");
+<script>
+    document.addEventListener("scroll", function () {
+        const sections = document.querySelectorAll("section");
+        const navLinks = document.querySelectorAll("#nav ul li a");
 
-    let current = "";
+        let current = "";
 
-    sections.forEach((section) => {
-        const sectionTop = section.offsetTop - 50; // Adjust for fixed navbar
-        const sectionHeight = section.offsetHeight;
+        sections.forEach((section) => {
+            const sectionTop = section.offsetTop - 50; // Adjust for fixed navbar
+            const sectionHeight = section.offsetHeight;
 
-        if (pageYOffset >= sectionTop && pageYOffset < sectionTop + sectionHeight) {
-            current = section.getAttribute("id");
-        }
+            if (pageYOffset >= sectionTop && pageYOffset < sectionTop + sectionHeight) {
+                current = section.getAttribute("id");
+            }
+        });
+
+        navLinks.forEach((link) => {
+            link.classList.remove("active");
+            if (link.getAttribute("href") === `#${current}`) {
+                link.classList.add("active");
+            }
+        });
     });
+</script>
 
-    navLinks.forEach((link) => {
-        link.classList.remove("active");
-        if (link.getAttribute("href") === `#${current}`) {
-            link.classList.add("active");
-        }
-    });
-});
 
 </body>
 </html>
