--- a/index.html
+++ b/index.html
@@ -115,35 +115,35 @@
             </header>
 
             <!-- Subsection: Teaching Interests -->
-            <section class="teaching-interests">
+            <section id="TeachingInterests" class="teaching-interests">
                 <h3>Teaching Interests</h3>
                 <p>MATLAB Programming, Thermodynamics, Heat Transfer, and Aerospace Propulsion Systems.</p>
             </section>
 
             <!-- Subsection: Current Classes -->
-            <section class="current-classes">
+            <section id="CurrentClasses" class="current-classes">
                 <h3>Current Classes</h3>
-		<p><em>California State University, Chico</em></p>
+                <p><em>California State University, Chico</em></p>
                 <ul class="class-list">
                     <li>
                         <strong>MECH208 Introduction to Technical Computing</strong>
-			<span class="details">Fall 2024</span>
+                        <span class="details">Fall 2024</span>
                         <span class="details">Course Description: This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. 
-				Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. 
-				The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</span>
+                            Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. 
+                            The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</span>
                     </li>
                     <li>
                         <strong>MECH338 Heat Transfer</strong>
-			<span class="details">Fall 2024</span>
+                        <span class="details">Fall 2024</span>
                         <span class="details">Course Description: This course explores steady-state and transient (unsteady) heat conduction in one and two dimensions. 
-				It introduces numerical methods such as finite-difference and finite-element analysis. 
-				Additionally, the course covers free and forced convection, along with radiation heat transfer.</span>
+                            It introduces numerical methods such as finite-difference and finite-element analysis. 
+                            Additionally, the course covers free and forced convection, along with radiation heat transfer.</span>
                     </li>
                 </ul>
             </section>
 
             <!-- Subsection: Previous Classes -->
-            <section class="previous-classes">
+            <section id="PreviousClasses" class="previous-classes">
                 <h3>Previous Classes</h3>
                 <p><em>Embry-Riddle Aeronautical University</em></p>
                 <ul class="class-list">
@@ -176,7 +176,6 @@
         </div>
     </div>
 </section>
-
 
 						
 <!-- Research -->
