--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li class="dropdown">
             <a href="#Classes">Classes</a>
             <ul class="dropdown-content">
-                <li><a href="#">MECH 208</a></li>
+                <li><a href="mech208.html">MECH 208</a></li>
                 <li><a href="#">MECH 338</a></li>
             </ul>
         </li>
