--- a/mech208.html
+++ b/mech208.html
@@ -61,19 +61,11 @@
         <div class="content">
             <!-- Main Title -->
             <header class="major">
-                <h2>Classes</h2>
+                <h2>MECH208 Introduction to Technical Computing</h2>
             </header>
-
-            <!-- Subsection: Teaching Interests -->
-            <section id="TeachingInterests" class="teaching-interests">
-                <h3>Teaching Interests</h3>
-                <p>MATLAB Programming, Thermodynamics, Heat Transfer, and Aerospace Propulsion Systems.</p>
-            </section>
-
             <!-- Subsection: Current Classes -->
             <section id="CurrentClasses" class="current-classes">
-                <h3>Current Classes</h3>
-                <p><em>California State University, Chico</em></p>
+                <h3>Course Description</h3>
                 <ul class="class-list">
                     <li>
                         <strong>MECH208 Introduction to Technical Computing</strong>
@@ -88,38 +80,6 @@
                         <span class="details">Course Description: This course explores steady-state and transient (unsteady) heat conduction in one and two dimensions. 
                             It introduces numerical methods such as finite-difference and finite-element analysis. 
                             Additionally, the course covers free and forced convection, along with radiation heat transfer.</span>
-                    </li>
-                </ul>
-            </section>
-
-            <!-- Subsection: Previous Classes -->
-            <section id="PreviousClasses" class="previous-classes">
-                <h3>Previous Classes</h3>
-                <p><em>Embry-Riddle Aeronautical University</em></p>
-                <ul class="class-list">
-                    <li>
-                        <strong>ES403 Heat Transfer</strong>
-                        <span class="details">Spring 2022 - Spring 2024 | Instructor of Record</span>
-                    </li>
-                    <li>
-                        <strong>ME314L Instrument and Data Acquisition Lab</strong>
-                        <span class="details">Fall 2021 | TA</span>
-                    </li>
-                    <li>
-                        <strong>ME438L Model-Based Control System Design Lab</strong>
-                        <span class="details">Fall 2021 | TA</span>
-                    </li>
-                    <li>
-                        <strong>ES403 Heat Transfer</strong>
-                        <span class="details">Fall 2020 - Spring 2021 | TA</span>
-                    </li>
-                    <li>
-                        <strong>AE508 Intermediate Heat Transfer</strong>
-                        <span class="details">Fall 2019 - Spring 2020 | TA</span>
-                    </li>
-                    <li>
-                        <strong>AE403 Jet Propulsion</strong>
-                        <span class="details">Spring 2018 - Spring 2019 | TA</span>
                     </li>
                 </ul>
             </section>
