--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="#Classes">Classes</a>
             <ul class="dropdown-content">
                 <li><a href="mech208.html">MECH 208</a></li>
-                <li><a href="#">MECH 338</a></li>
+                <li><a href="mech338.html">MECH 338</a></li>
             </ul>
         </li>
         <li><a href="#Research">Research</a></li>
