--- a/mech208.html
+++ b/mech208.html
@@ -66,11 +66,10 @@
             <!-- Subsection: Current Classes -->
             <section id="CurrentClasses" class="current-classes">
                 <h3>Course Description</h3>
-                        <strong>MECH208 Introduction to Technical Computing</strong>
-                        <span class="details">Fall 2024</span>
-                        <span class="details">Course Description: This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. 
+                        <span class="details">This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. 
                             Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. 
                             The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</span>
+		    <!-- <span class="details">Fall 2024</span> -->
             </section>
         </div>
     </div>
