--- a/mech208.html
+++ b/mech208.html
@@ -69,7 +69,10 @@
                         <span class="details">This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. 
                             Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. 
                             The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</span>
-		    <!-- <span class="details">Fall 2024</span> -->
+		<h3>Course Objectives</h3>
+                        <span class="details">This course ...</span>
+		<h3>Recommended Textbooks</h3>
+                        <span class="details">This course ...</span>
             </section>
         </div>
     </div>
