--- a/mech208.html
+++ b/mech208.html
@@ -63,20 +63,48 @@
             <header class="major">
                 <h2>MECH208 Introduction to Technical Computing</h2>
             </header>
+
             <!-- Subsection: Current Classes -->
-            <section id="CurrentClasses" class="current-classes">
+            <article id="CurrentClasses" class="current-classes">
                 <h3>Course Description</h3>
-                        <span class="details">This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. 
-                            Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. 
-                            The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</span>
-		<h3>Course Objectives</h3>
-                        <span class="details">This course ...</span>
-		<h3>Recommended Textbooks</h3>
-                        <span class="details">This course ...</span>
-            </section>
+                <p>
+                    This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include:
+                </p>
+                <ul>
+                    <li>Kinematics and Kinetics</li>
+                    <li>Fluid Flow</li>
+                    <li>Thermal Systems</li>
+                    <li>Fundamentals of Machine Learning</li>
+                </ul>
+                <p>
+                    The course consists of 1 hour of lecture and 3 hours of laboratory work each week.
+                </p>
+
+                <h3>Course Objectives</h3>
+                <p>
+                    By the end of this course, students will be able to:
+                </p>
+                <ul>
+                    <li>Use MATLAB to model and solve engineering problems.</li>
+                    <li>Understand and apply numerical methods for engineering applications.</li>
+                    <li>Analyze and visualize data effectively using MATLAB tools.</li>
+                    <li>Develop technical computing skills for future coursework and careers.</li>
+                </ul>
+
+                <h3>Recommended Textbooks</h3>
+                <p>
+                    Suggested readings and references for this course:
+                </p>
+                <ul>
+                    <li><em>MATLAB for Engineers</em> by Holly Moore (5th Edition).</li>
+                    <li><em>Numerical Methods for Engineers</em> by Steven C. Chapra and Raymond P. Canale.</li>
+                    <li>Supplementary online materials provided via the course portal.</li>
+                </ul>
+            </article>
         </div>
     </div>
 </section>
+
 
 					
 <!-- Scripts -->
