--- a/index.html
+++ b/index.html
@@ -257,7 +257,16 @@
     <header class="major">
         <h2>Research Team</h2>
     </header>
-    
+        
+	<div>
+        <h3>Principal Investigator</h3>
+        <ul class="class-list">
+            <li>
+                    <strong>Asst. Prof. Yang Chao, Ph.D.</strong>
+                </a>
+            </li>
+        </ul>
+    </div>
     <div>
         <h3>Faculty Members</h3>
         <ul class="class-list">
