--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <ul class="class-list">
            <li>
                 <a href="https://apps.csuchico.edu/directory/Employee/ychao" class="dashed-underline">
-                    <strong>Asst. Prof. Yang Chao, Ph.D.</strong>
+                    <strong>Dr. Yang Chao</strong>
                 </a>
                 <span class="details">Assistant Professor, Mechanical and Mechatronic Engineering and Advanced Manufacturing, California State University, Chico</span>
             </li>
