--- a/index.html
+++ b/index.html
@@ -218,15 +218,35 @@
     <header class="major">
         <h2>Publications</h2>
     </header>
-    <p>
-        <!-- The following conference papers are scheduled for 2025: <br /> -->
-	<h3><strong>Conference Papers for 2025</strong></h3>
-        1. A paper authored by me, titled <strong><em>Analysis of Thermal Entrance Length in Turbulent Supercritical CO$_{\textnormal{2}}$ Flow Through a Horizontal Circular Tube</em></strong>, accepted for presentation at the AIAA SciTech Forum, scheduled 6–10 January 2025 in Orlando, Florida. <br />
-        2. A paper authored by my student, titled <strong><em>An Optimization of Tesla-Type Valve for Mitigating Backflow in Rotary Detonation Engines</em></strong>, accepted for presentation at the ASME Aerospace Structures, Structural Dynamics, and Materials Conference, scheduled 5–7 May 2025 in Houston, Texas. <br />
-        3. A paper authored by my student, titled <strong><em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em></strong>, currently under review for the SmallSat Europe Conference, scheduled 27-28 May 2025 in Amsterdam, Netherlands. <br />
-    </p>
-    <p>
-        <h3 style="margin-bottom: 15px;"><strong>Featured Journal Papers</strong></h3>
+
+    <!-- Conference Papers for 2025 -->
+    <section>
+        <h3>Conference Papers for 2025</h3>
+        <ol>
+            <li>
+                <strong><em>Analysis of Thermal Entrance Length in Turbulent Supercritical CO<sub>2</sub> Flow Through a Horizontal Circular Tube</em></strong><br>
+                Authored by me, this paper has been accepted for presentation at the 
+                <strong>AIAA SciTech Forum</strong>, scheduled for <strong>6–10 January 2025</strong> 
+                in Orlando, Florida.
+            </li>
+            <li>
+                <strong><em>An Optimization of Tesla-Type Valve for Mitigating Backflow in Rotary Detonation Engines</em></strong><br>
+                Authored by my student, this paper has been accepted for presentation at the 
+                <strong>ASME Aerospace Structures, Structural Dynamics, and Materials Conference</strong>, 
+                scheduled for <strong>5–7 May 2025</strong> in Houston, Texas.
+            </li>
+            <li>
+                <strong><em>Non-Destructive Qualification Testing for Aerospace Structures Using A Predictive Vibration Method</em></strong><br>
+                Authored by my student, this paper is currently under review for the 
+                <strong>SmallSat Europe Conference</strong>, scheduled for <strong>27–28 May 2025</strong> 
+                in Amsterdam, Netherlands.
+            </li>
+        </ol>
+    </section>
+
+    <!-- Featured Journal Papers -->
+    <section>
+        <h3 style="margin-bottom: 15px;">Featured Journal Papers</h3>
         <ul>
             <li>
                 <a href="https://asmedigitalcollection.asme.org/heattransfer/article/144/12/120801/1145764/Comprehensive-Review-of-Heat-Transfer-Correlations" target="_blank" class="dashed-underline">
@@ -244,12 +264,15 @@
                 </a>
             </li>
         </ul>
-        <div style="display: flex; align-items: center; gap: 5px; margin-top: 25px; margin-bottom: 15px;">
-            <h3 style="margin: 0;"><strong>Full Publication List:</strong></h3>
-            <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
-        </div>
-    </p>
+    </section>
+
+    <!-- Full Publication List -->
+    <section style="display: flex; align-items: center; gap: 5px; margin-top: 25px; margin-bottom: 15px;">
+        <h3 style="margin: 0;">Full Publication List:</h3>
+        <a href="https://scholar.google.com/citations?hl=en&user=wxlWCxYAAAAJ" target="_blank" class="dashed-underline">Google Scholar Profile</a>
+    </section>
 </section>
+
 
 	
 <!-- People -->
