--- a/mech208.html
+++ b/mech208.html
@@ -96,7 +96,9 @@
                     Suggested readings and references for this course:
                 </p>
                 <ul>
-                    <li><em>MATLAB for Engineers</em> by Holly Moore (5th Edition).</li>
+                    <li>
+                        <em>Introduction to MATLAB for Engineers</em> by William J. Palm (ISBN: 9780073534879, McGraw-Hill Education, 2010).
+                    </li>
                     <li><em>Numerical Methods for Engineers</em> by Steven C. Chapra and Raymond P. Canale.</li>
                     <li>Supplementary online materials provided via the course portal.</li>
                 </ul>
@@ -104,6 +106,7 @@
         </div>
     </div>
 </section>
+
 
 
 					
